unknown changes, probably better to avoid

--- a/Privacy.html
+++ b/Privacy.html
@@ -65,7 +65,7 @@
 			<li>
                 <h3>F &nbsp;&nbsp; Location information permission</h3>
                 <ol>
-                    <li> The Credence Tracker app can use the phone location with your consent, allows you to know the relative distance between yourself and the asset. </li>
+                    <li> The 7-24telematics app can use the phone location with your consent, allows you to know the relative distance between yourself and the asset. </li>
 					<li> The location will only be collected when the location data is activated on the map page. Exiting the app or turning off the location data on the map page will not collect the location.</li>
 					<li> The app and server will not store any user's location data.</li>
 					<li> If you do not accept the location data, it will not affect other functions of the app.</li>
